# django-slack-bot

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Makefile  pyproject.toml  setup.cfg
.github/workflows/: django.yml
dsbot/: client.py  conf.py  decorators.py  exceptions.py  tasks.py  util.py
dsbot/client/: __init__.py  rtm.py  web.py
dsbot/commands/: default.py
dsbot/example/: __init__.py  asgi.py  settings.py  wsgi.py
dsbot/management/commands/: bot.py
tests/: test_util.py
tests/example/: settings.py
